tests/ui/feature-gates/feature-gate-c-size-t.stderr
error[E0658]: use of unstable library feature `c_size_t`
  --> $DIR/feature-gate-c-size-t.rs:3:16
   |
LL | use std::ffi::{c_intptr_t};
   |                ^^^^^^^^^^
   |
   = note: see issue #88345 <https://github.com/rust-lang/rust/issues/88345> for more information
   = help: add `#![feature(c_size_t)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
