tests/ui/feature-gates/feature-gate-c-size-t.rs
#![crate_type = "lib"]

use std::ffi::{c_intptr_t};
//~^ ERROR use of unstable library feature `c_size_t`
